kubernetes/kubernetes-deployment-project/manifests/detection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detection
  namespace: ferme-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: detection
  template:
    metadata:
      labels:
        app: detection
    spec:
      containers:
      - name: detection
        image: your-detection-image
