kubernetes/kubernetes-deployment-project/manifests/sensor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor
  namespace: ferme-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sensor
  template:
    metadata:
      labels:
        app: sensor
    spec:
      containers:
      - name: sensor
        image: your-sensor-image
